# fcitx5-shami

./: CMakeLists.txt  README.md  a.out  install.sh
src/: CMakeLists.txt  boshiamy_data-debug.hpp  boshiamy_data-real.hpp  boshiamy_data.cpp  boshiamy_data.hpp  shami-addon.conf.in  shami.conf  shami.cpp  shami.h
